--- a/work/planAhead/Integrate1/Integrate1.runs/synth_1/.xst.begin.rst
+++ b/work/planAhead/Integrate1/Integrate1.runs/synth_1/.xst.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="xst" Owner="Jing Yun" Host="TOASTER-COMPUTE" Pid="4600">
+    <Process Command="xst" Owner="trying" Host="DESKTOP-Q397L9N" Pid="61708">
     </Process>
 </ProcessHandle>
